<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@android:color/white"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/login"
        android:textAllCaps="true"
        android:singleLine="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="Deprecated" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back"
        android:visibility="invisible"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/img_next"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        android:background="@drawable/home"
        android:contentDescription="@string/next"
        android:visibility="invisible"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>